# practices

./: Lab-1.ipynb  README.md  pyproject.toml
DE/: DEB-Lab-1.ipynb  DEB-Lab-3.ipynb  Lab-1.ipynb  Lab-2.ipynb
