[tool.poetry]
name = "debc"
version = "0.1.0"
description = ""
authors = ["Andres Ladino <aladinoster@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^1.1.3"
polars = "^1.17.1"
ipython = "^8.30.0"
ipykernel = "^6.29.5"
pyarrow = "^18.1.0"
rich = "^13.9.4"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
