[project]
authors = [
    {name = "Andres Ladino", email = "aladinoster@gmail.com"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "duckdb<2.0.0,>=1.1.3",
    "polars<2.0.0,>=1.17.1",
    "ipython<9.0.0,>=8.30.0",
    "ipykernel<7.0.0,>=6.29.5",
    "pyarrow<19.0.0,>=18.1.0",
    "rich<14.0.0,>=13.9.4",
    "pandas<3.0.0,>=2.2.3",
]
name = "dsaebc"
version = "0.1.0"
description = ""
readme = "README.md"

[tools.setuptools]
package-dir= {"" = "src"}


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

